# gifts-parser

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
src/: files.py  telegram.py  utils.py  web.py
